# rs-bonjson

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md
benches/: comparison.rs
examples/: decode_profile.rs  quick_bench.rs  type_dispatch_bench.rs
src/: de.rs  de_tests.rs  decoder.rs  encoder.rs  error.rs  error_tests.rs  lib.rs  lib_tests.rs  ser.rs  ser_tests.rs  types.rs  types_tests.rs  value.rs  value_tests.rs
tests/: conformance.rs
