[package]
name = "serde_bonjson"
version = "0.1.0"
edition = "2021"
authors = ["Karl Stenerud <kstenerud@gmail.com>"]
description = "A high-performance BONJSON (Binary Object Notation for JSON) encoder and decoder with serde support"
license = "MIT"
repository = "https://github.com/kstenerud/bonjson"
keywords = ["bonjson", "json", "binary", "serialization", "serde"]
categories = ["encoding", "parser-implementations"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
simdutf8 = { version = "0.1", optional = true }

[dev-dependencies]
serde_json = "1.0"
criterion = "0.5"
regex = "1.10"

[[bench]]
name = "comparison"
harness = false

[features]
default = []
simd-utf8 = ["simdutf8"]

[profile.release]
lto = true
codegen-units = 1
